test/classes/delete-free/lifetimes/iter-return-first-borrow.good
iter-return-first-borrow.chpl:14: In function 'getfirstborrow':
iter-return-first-borrow.chpl:16: error: Scoped variable i cannot be returned
iter-return-first-borrow.chpl:15: note: consider scope of i
